--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ scripts/terraform/** linguist-vendored
 scripts/tests/test.mk linguist-vendored
 scripts/init.mk linguist-vendored
 scripts/shellscript-linter.sh linguist-vendored
+*.pem filter=git-crypt diff=git-crypt
