Adding pylint to precommit

--- a/scripts/config/pre-commit.yaml
+++ b/scripts/config/pre-commit.yaml
@@ -17,6 +17,17 @@ repos:
     # -   id: ...
   - repo: local
     hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        args: [
+            "-rn", # Only display messages
+            "-sn", # Don't display the score
+          ]
+  - repo: local
+    hooks:
     - id: pytest
       name: pytest
       entry: pytest src/flask/tests
