--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==3.1.4
 MarkupSafe==3.0.1
 pycparser==2.22
 PyJWT==2.9.0
+pylint==3.3.1
 pymongo==4.10.1
 pytest==8.3.3
 pytest-mock==3.14.0
